@@ -21,21 +21,21 @@ IUSE=""
 DEPEND=""
 RDEPEND="sci-biology/screed"
 
-python_prepare_all(){
-	rm -rf lib/{bzip2,zlib} || die
-
-	sed \
-		-e 's:zlib/zlib.h:zlib.h:g' \
-		-e 's:bzip2/bzlib.h:bzlib.h:g' \
-		-i lib/read_parsers.hh lib/counting.cc || die
-
-	sed \
-		-e "/extra_objects/d" \
-		-e "s:'nose >= 1.0', ::g" \
-		-e "s:'sphinx',::g" \
-		-e '/libraries/s:, ]:, "z", "bz2", ]:g' \
-		-e "s:'-O3',::g" \
-		-i setup.py || die
-
-	distutils-r1_python_prepare_all
-}
+#python_prepare_all(){
+#	rm -rf lib/{bzip2,zlib} || die
+#
+#	sed \
+#		-e 's:zlib/zlib.h:zlib.h:g' \
+#		-e 's:bzip2/bzlib.h:bzlib.h:g' \
+#		-i lib/read_parsers.hh lib/counting.cc || die
+#
+#	sed \
+#		-e "/extra_objects/d" \
+#		-e "s:'nose >= 1.0', ::g" \
+#		-e "s:'sphinx',::g" \
+#		-e '/libraries/s:, ]:, "z", "bz2", ]:g' \
+#		-e "s:'-O3',::g" \
+#		-i setup.py || die
+#
+#	distutils-r1_python_prepare_all
+#}
