@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> khmer-9999.ebuild:
+  sci-biology/khmer: upstream dropped the bundled zlib/bzip2 use if it is
+  available system-wide, upstream https://github.com/ged-lab/khmer/pull/346
+
   24 Mar 2014; Justin Lecher <jlec@gentoo.org> khmer-0.8.ebuild,
   khmer-9999.ebuild:
   Also drop sphinx as build requirement
